src/objects/Randomization_Form__c.object
<CustomObject>
    <fields>
        <fullName>CRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRF</label>
        <referenceTo>CRF__c</referenceTo>
        <relationshipLabel>Randomization Forms</relationshipLabel>
        <relationshipName>Randomization_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>CompletedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consent_Signed_Date__c</fullName>
        <label>Consent Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Did_Patient_Sign_Treatment_Consent_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did Patient Sign Treatment Consent Form?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Save_and_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Save and Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HER2Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HER2Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Randomized_Reason__c</fullName>
        <label>Not Randomized Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalCRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OriginalCRF</label>
        <referenceTo>Randomization_Form__c</referenceTo>
        <relationshipLabel>Randomization Forms</relationshipLabel>
        <relationshipName>Randomization_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Reason_Did_Not_Sign_Consent_Form__c</fullName>
        <label>Other Reason Did Not Sign Consent Form</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Screening</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Randomization_Result__c</fullName>
        <defaultValue>&apos;Not Randomized&apos;</defaultValue>
        <label>Randomization Result</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted by Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Case_Number__c</fullName>
        <label>Test Case Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>Randomization Forms</relationshipLabel>
        <relationshipName>Randomization_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Why_Patient_Not_Signed_Consent_Form__c</fullName>
        <label>Why Patient Not Signed Consent Form</label>
        <picklist>
            <picklistValues>
                <fullName>Decided not to have neoadjuvant chemotherapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decided not to be treated with a novel agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient found to be ineligible for the study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient found to be ineligible because they are MammaPrint Low, ER Positive, HER2 Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient found to be ineligible because inability to complete MammaPrint Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient found to be ineligible because they did not meet other eligibility criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient found to be ineligible because patient could not complete MRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient found to be ineligible because patient could not complete core biopsy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pg_Randomizationdetail_Id__c</fullName>
        <label>pg_Randomizationdetail_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pg_status__c</fullName>
        <label>pg_status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Randomization Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Randomization Forms</pluralLabel>
    <recordTypes>
        <fullName>AdHoc</fullName>
        <active>true</active>
        <label>AdHoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Pending</fullName>
        <active>true</active>
        <label>Approval Pending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <recordTypes>
        <fullName>NotRandomized</fullName>
        <active>true</active>
        <description>IF patient is not rendomized and treatment arm is not assigned to patient</description>
        <label>NotRandomized</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Consent_Signed_Date_date_validation</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Consent_Signed_Date__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Consent_Signed_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Did_Patient_Sign_Treatment_Cons</fullName>
        <active>false</active>
        <errorConditionFormula>Did_Patient_Sign_Treatment_Consent_Form__c = false &amp;&amp;  ISPICKVAL( Why_Patient_Not_Signed_Consent_Form__c , &apos;&apos;)</errorConditionFormula>
        <errorMessage>If patient did not sign treatment consent then please select the Reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Other_Reason_Field</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Why_Patient_Not_Signed_Consent_Form__c ,&apos;Other&apos;) &amp;&amp;  ISBLANK(Other_Reason_Did_Not_Sign_Consent_Form__c)</errorConditionFormula>
        <errorDisplayField>CRF__c</errorDisplayField>
        <errorMessage>&quot;Please select Other reason.&quot;</errorMessage>
    </validationRules>
</CustomObject>